Fixed hearthstone pictures / spacing
Fixed hearthstone pictures / spacing on mobile for divisions in index.html

--- a/app.css
+++ b/app.css
@@ -229,7 +229,7 @@ body h4{
     margin-top: 2%;
 }
 
-@media screen and (max-width: 600px) {
+@media screen and (max-width: 726px) {
     #collage {
       visibility: hidden;
       clear: both;
